fix spotless